compare and reset functions added

--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <link href="style.css" rel="stylesheet"></style>
   </head>
   <body>
- 
-    <div class="game">
-        <img src="Images/rps-1.png" id="rock"></div>
-        <img src="Images/rps-2.png" id="paper"></div>
-        <img src="Images/rps-3.png" id="scissors"></div>
-        <span id ="scoreboard"  class="hidden"> HELLO</span>
-        <img src="Images/rps-1.png" id="computer guess" class="hidden" ></div>
-        
-    </div>
+      <main>
+      <section class="heading">
+ <hi>Rock Paper Scissors</h1>
+</section>
 
+    <container class="game" >
+        <img src="Images/rps-1.png" id="rock"></img>
+        <img src="Images/rps-2.png" id="paper"></img>
+        <img src="Images/rps-3.png" id="scissors"></img>
+        <span id ="outcome"  class="hidden"> </span>
+        <img src="Images/rps-1.png" id="computer guess" class="hidden" >
+    </container>
+<section class="play-again hidden">
+    <h4>Play again?</h4>
+</section>
+</main>
   </body>
   <script src="script.js"></script>
 </html>
